--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,13 +1,16 @@
-@import 'tailwind/_base.css';
-@import 'tailwind/_components.css';
-@import 'tailwind/_utilities.css';
+@import 'tailwindcss';
+@import './tailwind/_base.css';
+@import './tailwind/_components.css';
+@import './tailwind/_utilities.css';
 
-@import '_checkbox-radio-switch.css';
-@import '_progress.css';
-@import '_scrollbars.css';
-@import '_table.css';
+@import './_checkbox-radio-switch.css';
+@import './_progress.css';
+@import './_scrollbars.css';
+@import './_table.css';
 
-@import 'styles/_basic.css';
-@import 'styles/_white.css';
+@import './styles/_basic.css';
+@import './styles/_white.css';
 
-@import 'ansi.css';
+@import './ansi.css';
+
+@config '../../tailwind.config.js';
